@@ -27,15 +27,15 @@ dga_LDADD = $(XF86DGA_LIBS)
 dga_SOURCES =	\
         dga.c
 
-appman_SOURCES = \
+appman_PRE = \
         dga.man
 
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST = $(appman_SOURCES)
+EXTRA_DIST = $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
